// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@mykeels/mee-karaoke components/SongUploader Can Fetch From Youtube 1`] = `
<div
  className="block h-screen w-screen song-uploader px-16 py-8 relative"
>
  <div
    className="flex w-full h-full items-center justify-center py-4 px-8 bg-purple-100 opacity-75"
  />
  <div
    className="flex w-full h-full items-center justify-center py-4 px-16 absolute top-0 left-0"
  >
    <div
      className="block w-full text-white"
    >
      <div
        className="text-3xl py-8 text-center"
      >
        Step 2: Choose the audio
      </div>
      <div
        className="block p-8 text-xl"
      >
        <div
          className="inline-block w-full lg:w-1/2 lg:text-center"
        >
          <div
            className="py-4"
          >
            From Youtube
          </div>
          <div
            className="block w-full py-4"
          >
            <form
              className="flex"
              onSubmit={[Function]}
            >
              <div
                className="inline-block w-3/4"
              >
                <input
                  className="w-full text-xl px-4 py-2 text-purple-200"
                  name="url"
                  placeholder="https://www.youtube.com/watch?v=000"
                  type="text"
                />
                <div
                  className="py-2"
                />
              </div>
              <div
                className="inline-block w-1/4"
              >
                <button
                  className="flex bg-lavender-100 px-4 py-2"
                  type="submit"
                >
                  Fetch
                </button>
              </div>
            </form>
          </div>
        </div>
        <div
          className="inline-block w-full lg:text-center lg:w-1/2"
        >
          <div
            className="py-4"
          >
            From File
          </div>
          <div
            className="px-8"
          >
            <div
              className="py-2 px-4 leading-tight bg-lavender-100 relative text-center"
            >
              <input
                accept=".mp3, .ogg, .wav, .webm"
                className="opacity-0 cursor-pointer block absolute top-0 left-0 h-full w-full"
                onChange={[Function]}
                type="file"
              />
              Upload a File
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`@mykeels/mee-karaoke components/SongUploader Index 1`] = `
<div
  className="block h-screen w-screen song-uploader px-16 py-8 relative"
>
  <div
    className="flex w-full h-full items-center justify-center py-4 px-8 bg-purple-100 opacity-75"
  />
  <div
    className="flex w-full h-full items-center justify-center py-4 px-16 absolute top-0 left-0"
  >
    <div
      className="block w-full text-white"
    >
      <div
        className="text-3xl py-8 text-center"
      >
        Step 2: Choose the audio
      </div>
      <div
        className="block p-8 text-xl"
      >
        <div
          className="inline-block w-full lg:text-center"
        >
          <div
            className="py-4"
          >
            From File
          </div>
          <div
            className="px-8"
          >
            <div
              className="py-2 px-4 leading-tight bg-lavender-100 relative text-center"
            >
              <input
                accept=".mp3, .ogg, .wav, .webm"
                className="opacity-0 cursor-pointer block absolute top-0 left-0 h-full w-full"
                onChange={[Function]}
                type="file"
              />
              Upload a File
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
